[gd_scene load_steps=19 format=2]

[ext_resource path="res://RTSCamera.gd" type="Script" id=1]
[ext_resource path="res://GameSaver/GameSaver.gd" type="Script" id=2]
[ext_resource path="res://UI/BuildButton.gd" type="Script" id=3]
[ext_resource path="res://Game.gd" type="Script" id=4]
[ext_resource path="res://DetectorRendering/DetectorRendering.tscn" type="PackedScene" id=5]
[ext_resource path="res://ControlValue.gd" type="Script" id=6]
[ext_resource path="res://GameRules.gd" type="Script" id=7]
[ext_resource path="res://UnitMenu.gd" type="Script" id=8]
[ext_resource path="res://FinanceValue.gd" type="Script" id=9]
[ext_resource path="res://UI Layer.gd" type="Script" id=10]
[ext_resource path="res://Shaders/Fog of War/FogOfWar.gdshader" type="Shader" id=11]
[ext_resource path="res://CreateGame.gd" type="Script" id=12]
[ext_resource path="res://World/World.tscn" type="PackedScene" id=15]
[ext_resource path="res://GameActions/GameActions.gd" type="Script" id=17]

[sub_resource type="ShaderMaterial" id=8]
shader = ExtResource( 11 )

[sub_resource type="Environment" id=2]
background_mode = 1

[sub_resource type="World" id=9]
resource_local_to_scene = true
environment = SubResource( 2 )

[sub_resource type="Theme" id=5]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ -66.4966 ]
}

[node name="GameSaver" type="Node" parent="."]
script = ExtResource( 2 )

[node name="CreateGame" type="Node" parent="."]
script = ExtResource( 12 )

[node name="GameRules" type="Node" parent="."]
script = ExtResource( 7 )

[node name="ViewportContainer" type="ViewportContainer" parent="."]
material = SubResource( 8 )
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1024, 600 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3
physics_object_picking = true

[node name="World" parent="ViewportContainer/Viewport" instance=ExtResource( 15 )]

[node name="WorldCamera" type="Camera2D" parent="."]
position = Vector2( -45.5566, 17.9797 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_smoothed = true
script = ExtResource( 1 )
ZoomLimit_speed = 2.0

[node name="GameActions" type="Node" parent="."]
script = ExtResource( 17 )

[node name="DetectionMap" parent="." instance=ExtResource( 5 )]
world = SubResource( 9 )
handle_input_locally = false
render_target_update_mode = 3

[node name="UI Layer" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="UI" type="Control" parent="UI Layer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 5 )

[node name="LaunchButton" type="Button" parent="UI Layer/UI"]
margin_left = 24.0
margin_top = 15.0
margin_right = 96.0
margin_bottom = 35.0
text = "Launch"

[node name="UnitMenu" type="Control" parent="UI Layer/UI"]
margin_left = 922.875
margin_top = 525.195
margin_right = 1004.87
margin_bottom = 587.195
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="UI Layer/UI/UnitMenu"]
visible = false
margin_right = 50.0
margin_bottom = 20.0
text = "Move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Target" type="Button" parent="UI Layer/UI/UnitMenu"]
visible = false
margin_top = 25.0
margin_right = 51.0
margin_bottom = 45.0
text = "Target"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Build" type="Button" parent="UI Layer/UI"]
margin_left = 12.0
margin_top = 564.37
margin_right = 98.0
margin_bottom = 584.37
toggle_mode = true
action_mode = 0
text = "Build"
script = ExtResource( 3 )

[node name="BuildButtonVBoxContainer" type="VBoxContainer" parent="UI Layer/UI/Build"]
visible = false
margin_left = 38.0
margin_top = -50.0
margin_right = 113.0
margin_bottom = -4.0

[node name="BuildSiloButton" type="Button" parent="UI Layer/UI/Build/BuildButtonVBoxContainer"]
margin_right = 75.0
margin_bottom = 20.0
text = "Silo"

[node name="BuildRadarButton" type="Button" parent="UI Layer/UI/Build/BuildButtonVBoxContainer"]
margin_top = 24.0
margin_right = 75.0
margin_bottom = 44.0
text = "Radar"

[node name="PlayerInformation" type="Control" parent="UI Layer/UI"]
margin_left = 120.0
margin_top = 15.0
margin_right = 120.0
margin_bottom = 15.0

[node name="TopBarInfoContainer" type="HBoxContainer" parent="UI Layer/UI/PlayerInformation"]
margin_right = 40.0
margin_bottom = 40.0

[node name="ControlInfoContainer" type="HBoxContainer" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer"]
margin_right = 54.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlLabel" type="Label" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer/ControlInfoContainer"]
margin_top = 13.0
margin_right = 50.0
margin_bottom = 27.0
text = "Control:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlValue" type="Label" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer/ControlInfoContainer"]
margin_left = 54.0
margin_top = 13.0
margin_right = 54.0
margin_bottom = 27.0
script = ExtResource( 6 )

[node name="FinanceInfoContainer" type="HBoxContainer" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer"]
margin_left = 58.0
margin_right = 105.0
margin_bottom = 40.0

[node name="FinanceLable" type="Label" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer/FinanceInfoContainer"]
margin_top = 13.0
margin_right = 43.0
margin_bottom = 27.0
text = "Money"

[node name="FinanceValue" type="Label" parent="UI Layer/UI/PlayerInformation/TopBarInfoContainer/FinanceInfoContainer"]
margin_left = 47.0
margin_top = 13.0
margin_right = 47.0
margin_bottom = 27.0
script = ExtResource( 9 )

[node name="ResultLable" type="Label" parent="UI Layer/UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -28.0
margin_top = -7.0
margin_right = 28.0
margin_bottom = 7.0
text = "YOU XXX"

[node name="ShowRadar" type="CheckBox" parent="UI Layer/UI"]
margin_left = 911.783
margin_top = 10.3826
margin_right = 1011.78
margin_bottom = 34.3826
text = "Show Radar"

[node name="CreateIntelligencePackageBtn" type="Button" parent="UI Layer/UI"]
anchor_right = 0.006
anchor_bottom = 0.017
margin_left = 873.413
margin_top = 35.7857
margin_right = 1009.27
margin_bottom = 45.5857
toggle_mode = true
text = "Create Intel Package"

[node name="ViewIntelligencePackagesBtn" type="Button" parent="UI Layer/UI"]
margin_left = 873.749
margin_top = 68.3947
margin_right = 1009.75
margin_bottom = 88.3947
toggle_mode = true
text = "View Intel Packages"

[connection signal="OnPostLoad" from="GameSaver" to="." method="OnPostLoad"]
[connection signal="CountryWins" from="GameRules" to="." method="_on_GameRules_CountryWins"]
[connection signal="WorldEntitySelected" from="ViewportContainer/Viewport/World" to="." method="_on_World_WorldEntitySelected"]
[connection signal="HideUIOverlay" from="GameActions" to="UI Layer" method="_on_GameActions_HideUIOverlay"]
[connection signal="ShowUIOverlay" from="GameActions" to="UI Layer" method="_on_GameActions_ShowUIOverlay"]
[connection signal="button_down" from="UI Layer/UI/LaunchButton" to="." method="_on_Button_button_down"]
[connection signal="pressed" from="UI Layer/UI/UnitMenu/Move" to="." method="OnMovePressed"]
[connection signal="pressed" from="UI Layer/UI/UnitMenu/Target" to="." method="TargetPressed"]
[connection signal="UIBuildStructure" from="UI Layer/UI/Build" to="." method="_on_Build_UIBuildStructure"]
[connection signal="toggled" from="UI Layer/UI/Build" to="UI Layer/UI/Build" method="_on_Build_toggled"]
[connection signal="pressed" from="UI Layer/UI/Build/BuildButtonVBoxContainer/BuildSiloButton" to="UI Layer/UI/Build" method="_on_BuildSiloButton_pressed"]
[connection signal="pressed" from="UI Layer/UI/Build/BuildButtonVBoxContainer/BuildRadarButton" to="UI Layer/UI/Build" method="_on_BuildRadarButton_pressed"]
[connection signal="toggled" from="UI Layer/UI/ShowRadar" to="." method="_on_ShowRadar_toggled"]
[connection signal="toggled" from="UI Layer/UI/CreateIntelligencePackageBtn" to="." method="_on_CreateIntelligencePackageBtn_toggled"]
[connection signal="toggled" from="UI Layer/UI/ViewIntelligencePackagesBtn" to="." method="_on_ViewIntelligencePackagesBtn_toggled"]
